# bt2uart

./: CLAUDE.md  CMakeLists.txt  HARDWARE.md  README.md
src/: CMakeLists.txt  bt_keyboard.c  bt_keyboard.h  fifo.c  i2c_slave.c  main.c  reg.c
